# LsDynaToAPDL

./: .bazelrc  .clang-format  .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE.md  LsDynaToAPDL.pro  README.md  WORKSPACE.bazel  about.cpp  about.h  about.ui  apdlinterpreter.cpp  apdlinterpreter.h  changelog.config.js  convertersintax.cpp  convertersintax.h  credit.cpp  credit.h  credit.ui  dialog.cpp  dialog.h  dynanode.cpp  dynashell.cpp  finitelement.cpp  finitelement.h  git-change.sh  lsdynainterpreter.cpp  lsdynainterpreter.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  managefile.cpp  managefile.h  node.cpp  node.h  (+15 more)
.chglog/: config.yml
Documentation/html/: _2_users_2francescoargentieri_2_ls_dyna_to_a_p_d_l_2node_8cpp-example.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  about_8cpp.html  about_8cpp_source.html  about_8h.html  about_8h_source.html  annotated.html  apdlinterpreter_8h.html  apdlinterpreter_8h_source.html  class_about-members.html  class_about.html  class_converter_sinta_x-members.html  class_converter_sinta_x.html  class_element-members.html  class_element.html  class_finite_element-members.html  class_finite_element.html  class_main_window-members.html  class_main_window.html  class_manage_file-members.html  class_manage_file.html  class_node-members.html  class_node.html  class_shell-members.html  class_shell.html  classes.html  convertersintax_8cpp.html  convertersintax_8cpp_source.html  convertersintax_8h.html  convertersintax_8h_source.html  examples.html  files.html  finitelement_8cpp.html  finitelement_8cpp_source.html  finitelement_8h.html  finitelement_8h_source.html  functions.html  functions_func.html  functions_vars.html  (+48 more)
Documentation/html/search/: all_1.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_3.js  classes_4.js  classes_7.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+8 more)
Resources/License/: License.txt
cmake/: GitVersion.cmake  LsDynatoApdlCPack.cmake  LsdynatoApdlCPackOptions.cmake.in  deploy-osx.cmake.in  googletest-download.cmake
docs/: Doxyfile.in
shared/icons/: generic.icns
shared/macos/: CMakeDMGSetup.scpt
src/: CMakeLists.txt  about.cpp  about.h  apdlinterpreter.h  element.cc  element.h  finitelement.cpp  finitelement.h  lsdynainterpreter.cpp  mainwindow.cpp  mainwindow.h  managefile.cpp  managefile.h  node.cpp  node.h  reader.cpp  reader.h  shell.cpp  shell.h  src.pro  writeapdl.cpp  writeapdl.h
src/apdl/: BUILD.bazel  CMakeLists.txt
src/apdl/include/: writeapdl.h  writerdialog.h
src/apdl/include/apdl/: keypoint.h  node.h
src/apdl/src/: writeapdl.cc  writerdialog.cc
src/common/: BUILD.bazel  CMakeLists.txt  common.pro  filemanager.cc  filemanager.h  finite_element_types.h  logger_tools.h  node_type_impl.h
src/common/include/: element_shell_four_node.h  element_shellfournode.h  element_type_impl.h  elementproperty.h  filemanager.h  finite_element_types.h  node_type_impl.h  shellelement_type_impl.h
src/common/src/: element_shell_four_node.cc  elementproperty.cc  filemanager.cc
src/core/: BUILD.bazel  CMakeLists.txt  LICENSE  about.cpp  about.h  about.ui  dialog.cpp  dialog.h  dialog.ui  main.cc  mainwindow.cc  mainwindow.cpp  mainwindow.h  mainwindow.ui  parser.cc  parser.h  resources.qrc  version.h  version.h.in
src/logtools/: BUILD.bazel  CMakeLists.txt
src/logtools/include/: customassert.h  logger_tools.h
src/logtools/include/logtools/: logger_tools.h
src/lsdyna/: BUILD.bazel  CMakeLists.txt  converter.cc  converter.h  converterdialog.cc  converterdialog.h  keywords.cc  keywords.h  node.cc  node.h
src/lsdyna/include/: converter.h  converterdialog.h  element.h  element_shell.h  elementfactory.h  elementparser.h  keywords.h  node.h  unique_cast.h
src/lsdyna/src/: converter.cc  converterdialog.cc  element.cc  element_shell.cc  elementfactory.cc  elementparser.cc  keywords.cc  node.cc
test/: BUILD.bazel  CMakeLists.txt  converter.test.cc  example.k  femtypes.test.cc  filemanager.test.cc  keywords.test.cc  main.test.cc  test_converter.cc  test_femtypes.cc  test_logger.cc  test_managerfile.cc
