load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "common",
    srcs = [
        "src/filemanager.cc",
    ],
    hdrs = [
        "include/filemanager.h",
        "include/finite_element_types.h",
    ],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gabime_spdlog//:spdlog",
        "@fmt",
    ],
)
