load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "lsdyna",
    srcs = [
        "src/converter.cc",
        "src/keywords.cc",
        "src/node.cc",
    ],
    hdrs = [
        "include/converter.h",
        "include/keywords.h",
        "include/node.h",
    ],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/common",
        "@com_github_gabime_spdlog//:spdlog",
        "@fmt",
    ],
)
